fix wdn_copyright area to accommodate long text so it doesn't overlap logos. Change positioning so logos stay at top regardless of text height.

--- a/wdn/templates_3.0/css/footer/footer.css
+++ b/wdn/templates_3.0/css/footer/footer.css
@@ -70,7 +70,8 @@ Author: WDN
     -webkit-box-shadow: 0px -1px 0px #cecece, 0 3px 5px #AAA;
     -moz-box-shadow: 0px -1px 0px #cecece, 0 3px 5px #AAA;
     box-shadow: 0px -1px 0px #cecece, 0 3px 5px #AAA;
-    padding: 15px 24px;
+    padding: 15px 200px 24px 15px;
+    position:relative;
     color:#fff;
     line-height:1.6em;
     min-height:42px;
@@ -94,7 +95,7 @@ Author: WDN
 #wdn_logos {
     position:absolute;
     right:12px;
-    bottom:12px;
+    top:15px;
 }
 
 #wdn_logos a,
